openshift/openshift-routes-deployment/manifest/team-colddrink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-colddrinks
spec:
  selector:
    matchLabels:
      app: frontend-colddrinks
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend-colddrinks
    spec:
      containers:
      - name: frontend-colddrinks
        image: "quay.io/sample-apps/colddrinks:v1"
        ports:
        - name: colddrinks-80
          containerPort: 80
        - name: colddrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-colddrinks
spec:
  clusterIP: None
  ports:
  - name: colddrinks-80
    port: 80
    targetPort: 80
  - name: colddrinks-443
    port: 443
    targetPort: 443
  selector:
    name: frontend-colddrinks
---
