openshift/openshift-routes-deployment/manifest/route-passthrough-colddrink.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-passthrough-colddrink
  labels:
    name: colddrink
  annotations:
   kubernetes.io/ingress.class: "vpx"
spec:
  host: colddrink.beverages.com
#  path: "/" 
  to:
    kind: Service
    name: frontend-colddrinks
  tls:
    termination: passthrough
