openshift/openshift-routes-deployment/manifest/route-passthrough-hotdrink.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-passthrough-hotdrink
  labels:
    name: hotdrink
  annotations:
   kubernetes.io/ingress.class: "vpx"
spec:
  host: hotdrink.beverages.com
  to:
    kind: Service
    name: frontend-hotdrinks
  tls:
    termination: passthrough
