openshift/openshift-routes-deployment/manifest/route-reencrypt-hoddrink.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secured-reencrypt-route
  labels:
    name: hotdrink
  namespace: beverages
  annotations:
   kubernetes.io/ingress.class: "vpx"
spec:
  host: hotdrink.beverages.com
  to:
    kind: Service
    name: frontend-hotdrinks
  tls:
    termination: reencrypt

    key: |-
      -----BEGIN RSA PRIVATE KEY-----
                ...
      -----END RSA PRIVATE KEY-----

    certificate: |-
      -----BEGIN CERTIFICATE-----
                ...
      -----END CERTIFICATE-----
    
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
              ...
      -----END CERTIFICATE-----
