openshift/openshift-routes-deployment/manifest/route_passthrough_guestbook.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-passthrough-guestbook
  labels:
    name: guestbook
  annotations:
   kubernetes.io/ingress.class: "Citrix"
spec:
  host: guestbook.beverages.com
  to:
    kind: Service
    name: frontend-pods
  tls:
    termination: passthrough
