openshift/openshift-routes-deployment/manifest/team_guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-pods
  labels:
    app: redis
    tier: backend
    role: master
spec:
  clusterIP: None
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    tier: backend
    role: master

---

kind: Service
apiVersion: v1
metadata:
  name: redis-master
spec:
  type: ExternalName
  externalName: lb-service-redis.tier-2-adc.svc.cluster.local
  ports:
  - name: redis
    port: 6379


---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis:e2e  # or just image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    tier: backend
    role: slave
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    tier: backend
    role: slave

---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
      - name: slave
        image: gcr.io/google_samples/gb-redisslave:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-pods
  labels:
    app: guestbook
    tier: frontend
spec:
  clusterIP: None
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend

---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  type: ExternalName
  externalName: lb-service-redis.tier-2-cpx.svc.cluster.local
  ports:
  - name: frontend
    port: 80

---

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 2 
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: php-redis
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-master-ingress
  annotations:
   ingress.citrix.com/insecure-service-type: "tcp"
   ingress.citrix.com/insecure-port: "6379"
   kubernetes.io/ingress.class: "guestbook"
spec:
    backend:
        serviceName: redis-master-pods
        servicePort: 6379
