openshift/openshift-routes-deployment/manifest/unsecured-route-hotdrink.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: unsecured-route
  labels:
    name: hotdrink
  namespace: beverages
  annotations:
   kubernetes.io/ingress.class: "vpx"
spec:
  host: hotdrink.beverages.com
  path: "/"
  to:
    kind: Service
    name: frontend-hotdrinks
